--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "git+https://github.com/leitediego/tarefa1409.git"
   },
-  "author": "Giovane Barcelos",
+  "author": "Diego Leite",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/leitediego/tarefa1409/issues"
